--- a/Views/BasePopupPage.xaml
+++ b/Views/BasePopupPage.xaml
@@ -6,25 +6,18 @@
              Title="BasePopupPage">
     <ContentPage.ControlTemplate>
         <ControlTemplate>
-            <Grid>
-                <StackLayout  Grid.Row="0"
-                        VerticalOptions="FillAndExpand"   
-                        HorizontalOptions="FillAndExpand" >
-                    <StackLayout.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding Source={x:Reference this},Path=PopModelCommand}" />
-                    </StackLayout.GestureRecognizers>
-                </StackLayout>
-
-                <Frame HasShadow="False" 
-                       CornerRadius="0"
-                       Margin="{Binding Source={x:Reference this},Path=Margin}"
-                       Padding="0"
-                       Grid.Row="0"  VerticalOptions="{Binding Source={x:Reference this},Path=VerticalOptions}"   
+            <Grid BackgroundColor="Transparent">
+                <ContentPresenter Grid.Row="0"  VerticalOptions="{Binding Source={x:Reference this},Path=VerticalOptions}"   
                               HorizontalOptions="{Binding Source={x:Reference this},Path=HorizontalOptions}" 
-                             BackgroundColor="{Binding Source={x:Reference this},Path=ForegroundColor}">
-                    <ContentPresenter />
-                </Frame>
+                             BackgroundColor="{Binding Source={x:Reference this},Path=ForegroundColor}"  Margin="{Binding Source={x:Reference this},Path=Margin}">
 
+                    <ContentPresenter.GestureRecognizers>
+                        <TapGestureRecognizer  />
+                    </ContentPresenter.GestureRecognizers>
+                </ContentPresenter>
+                <Grid.GestureRecognizers>
+                    <TapGestureRecognizer  Command="{Binding Source={x:Reference this},Path=PopModelCommand}" />
+                </Grid.GestureRecognizers>
             </Grid>
         </ControlTemplate>
     </ContentPage.ControlTemplate>
